--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Card</title>
   </head>
-  <body>
+  <body class="overflow-y-hidden">
     <div id="root" class="bg-blue-100 h-screen flex justify-center items-center font-Outfit"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
